--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,6 +9,7 @@
 </head>
 <body>
     <div class="container">
+        <h1>Hello this is Afzal</h1>
         <h1>Hello this is Afzal</h1>
     </div>
 </body>
